saves/test/demo_full_20240802_193545/always_nolatches/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp always_nolatches_tb.v always_nolatches.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
always_nolatches_tb.v:77: $finish called at 140000 (1ps)

iverilog cmd 2 error:

